--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "react-dnd-multidrag-example",
+  "name": "react-dnd-target-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tanasehagi.github.io/react-dnd-target-example/",
   "dependencies": {
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/react": "16.8.22",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "16.8.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-dnd": "^8.0.3",
+    "react-dnd-html5-backend": "^8.0.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "3.5.2"
@@ -16,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "clean:deploy": "git push origin --delete gh-pages"
   },
   "eslintConfig": {
     "extends": "react-app"
